k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dart
  namespace: dart
spec:
  selector:
    app: dart
  ports:
    - port: 80
      targetPort: 8080
