k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dart
  namespace: dart
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dart.vorre.dev
      secretName: dart-tls
  rules:
    - host: dart.vorre.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dart
                port:
                  number: 80
